Fix vertical alignment of the threads header.

--- a/scss/partials/_threads_list.scss
+++ b/scss/partials/_threads_list.scss
@@ -116,7 +116,7 @@ div.threads-list {
           flex-flow: row nowrap;
           justify-content: flex-start;
           align-items: center;
-          height: 18px;
+          height: 24px;
           margin-bottom: 8px;
           text-align: left;
 
@@ -134,6 +134,7 @@ div.threads-list {
               font-size: 12px;
               line-height: 18px;
               flex: 0 1 auto;
+              align-self: center;
               color: var(--color);
               display: block;
               overflow: hidden;
@@ -149,6 +150,7 @@ div.threads-list {
             @include OC_Body_Book();
             font-size: 12px;
             line-height: 18px;
+            align-self: center;
           }
 
           div.thread-item-board-container {
@@ -166,6 +168,7 @@ div.threads-list {
               text-overflow: ellipsis;
               white-space: nowrap;
               text-decoration: underline;
+              align-self: center;
             }
           }
 
@@ -175,6 +178,7 @@ div.threads-list {
             line-height: 18px;
             flex: 0 0 auto;
             color: var(--color);
+            align-self: center;
           }
 
           div.thread-item-header-title {
@@ -184,6 +188,7 @@ div.threads-list {
             text-overflow: ellipsis;
             white-space: nowrap;
             flex: 0 1 50%;
+            align-self: center;
           }
         }
 
